--- a/index.html
+++ b/index.html
@@ -19,13 +19,13 @@
 
 
   <div id="selector">
-  <h1>Card Matching!</h1>
+  <h1>Card Matching Game</h1>
   
     <ul><p>
       <li>1. Select the dificulty level you would like.</li>
-      <li>2. Press the submit button to begin.</li>
-      <li>3. After seeing the cards, try to match them.</li>
-      <li>4. See if you can beat your best score!</li>
+      <li>2. We will show you a little peak.
+      <li>3. Find the matching cards.
+      <li>3. Try to beat your best score!</li>
     </ul></p>
   
   </div>
