--- a/index.html
+++ b/index.html
@@ -7,10 +7,10 @@
   <script type="text/javascript"src="js/jquery.js"></script>
   <script type="text/javascript"src="js/underscore.js"></script>
   <script type="text/javascript"src="js/main.js"></script>
-  <link href='http://fonts.googleapis.com/css?family=Oswald' rel='stylesheet' type='text/css'>
+<link href='http://fonts.googleapis.com/css?family=Josefin+Sans:700,600italic' rel='stylesheet' type='text/css'>
 </head>
 <body>
-  
+  <div class="container">
   <div id="winner">
     <p>Amazing Job! You won... You have a memory like a steel trap!</p><br><br>
     <h1><span id="reset">Play Again?</span></h1>
@@ -19,15 +19,15 @@
 
 
   <div id="selector">
-  <h1>Card Matching Game</h1>
+  <h1>Card Matching Game
   
-    <ul><p>
+    <ul>
       <li>1. Select the dificulty level you would like.</li>
       <li>2. We will show you a little peak.
       <li>3. Find the matching cards.
       <li>3. Try to beat your best score!</li>
-    </ul></p>
-  
+    </ul>
+  </h1>
   </div>
   
   <div id="choice">
@@ -113,6 +113,6 @@
     <div class="cardback"><img class="hardcard card" src=""></img></div>
   </div>
 
-
+</div>
 </body>
 </html>
