--- a/index.html
+++ b/index.html
@@ -1,1 +1,118 @@
-My GitHub Page
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8">
+  <title>Card Match Game</title>
+  <link rel="stylesheet" href="css/styles.css"></link>
+  <script type="text/javascript"src="js/jquery.js"></script>
+  <script type="text/javascript"src="js/underscore.js"></script>
+  <script type="text/javascript"src="js/main.js"></script>
+<link href='http://fonts.googleapis.com/css?family=Josefin+Sans:700,600italic' rel='stylesheet' type='text/css'>
+</head>
+<body>
+  <div class="container">
+  <div id="winner">
+    <p>Amazing Job! You won... You have a memory like a steel trap!</p><br><br>
+    <h1><span id="reset">Play Again?</span></h1>
+
+  </div>
+
+
+  <div id="selector">
+  <h1>Card Matching Game
+  
+    <ul>
+      <li>1. Select the dificulty level you would like.</li>
+      <li>2. We will show you a little peak.
+      <li>3. Find the matching cards.
+      <li>3. Try to beat your best score!</li>
+    </ul>
+  </h1>
+  </div>
+  
+  <div id="choice">
+   
+      <span id="easy">Play Easy</span>
+      <span id="intermediate">Play Intermediate</span>
+      <span id="difficult">Lose Difficult</span>
+
+  </div>
+
+  <div id="scoreboard">
+    <h1>
+      <div id="left-zone">Points: <span id="points">0</span></div>
+
+       <div id="right-zone"></div>Seconds: <span class="timer">-2</span></div>
+    </h1>
+  </div>
+
+
+
+  <div id="easy-game">
+    <div class="cardback"><img class="easycard card" src=""></img></div>
+    <div class="cardback"><img class="easycard card" src=""></img></div>
+    <div class="cardback"><img class="easycard card" src=""></img></div>
+    <div class="cardback"><img class="easycard card" src=""></img></div>
+    <div class="cardback"><img class="easycard card" src=""></img></div>
+    <div class="cardback"><img class="easycard card" src=""></img></div>
+    <div class="cardback"><img class="easycard card" src=""></img></div>
+    <div class="cardback"><img class="easycard card" src=""></img></div>
+  </div>
+
+  <div id="int-game">
+    <div class="cardback"><img class="intcard card" src=""></img></div>
+    <div class="cardback"><img class="intcard card" src=""></img></div>
+    <div class="cardback"><img class="intcard card" src=""></img></div>
+    <div class="cardback"><img class="intcard card" src=""></img></div>
+    <div class="cardback"><img class="intcard card" src=""></img></div>
+    <div class="cardback"><img class="intcard card" src=""></img></div>
+    <div class="cardback"><img class="intcard card" src=""></img></div>
+    <div class="cardback"><img class="intcard card" src=""></img></div>    
+    <div class="cardback"><img class="intcard card" src=""></img></div>
+    <div class="cardback"><img class="intcard card" src=""></img></div>
+    <div class="cardback"><img class="intcard card" src=""></img></div>
+    <div class="cardback"><img class="intcard card" src=""></img></div>
+    <div class="cardback"><img class="intcard card" src=""></img></div>
+    <div class="cardback"><img class="intcard card" src=""></img></div>
+    <div class="cardback"><img class="intcard card" src=""></img></div>
+    <div class="cardback"><img class="intcard card" src=""></img></div>
+  </div>
+
+  <div id="hard-game">
+    <div class="cardback"><img class="hardcard card" src=""></img></div>
+    <div class="cardback"><img class="hardcard card" src=""></img></div>
+    <div class="cardback"><img class="hardcard card" src=""></img></div>
+    <div class="cardback"><img class="hardcard card" src=""></img></div>
+    <div class="cardback"><img class="hardcard card" src=""></img></div>
+    <div class="cardback"><img class="hardcard card" src=""></img></div>
+    <div class="cardback"><img class="hardcard card" src=""></img></div>
+    <div class="cardback"><img class="hardcard card" src=""></img></div>    
+    <div class="cardback"><img class="hardcard card" src=""></img></div>
+    <div class="cardback"><img class="hardcard card" src=""></img></div>
+    <div class="cardback"><img class="hardcard card" src=""></img></div>
+    <div class="cardback"><img class="hardcard card" src=""></img></div>
+    <div class="cardback"><img class="hardcard card" src=""></img></div>
+    <div class="cardback"><img class="hardcard card" src=""></img></div>
+    <div class="cardback"><img class="hardcard card" src=""></img></div>
+    <div class="cardback"><img class="hardcard card" src=""></img></div>
+    <div class="cardback"><img class="hardcard card" src=""></img></div>
+    <div class="cardback"><img class="hardcard card" src=""></img></div>
+    <div class="cardback"><img class="hardcard card" src=""></img></div>
+    <div class="cardback"><img class="hardcard card" src=""></img></div>
+    <div class="cardback"><img class="hardcard card" src=""></img></div>
+    <div class="cardback"><img class="hardcard card" src=""></img></div>
+    <div class="cardback"><img class="hardcard card" src=""></img></div>
+    <div class="cardback"><img class="hardcard card" src=""></img></div>    
+    <div class="cardback"><img class="hardcard card" src=""></img></div>
+    <div class="cardback"><img class="hardcard card" src=""></img></div>
+    <div class="cardback"><img class="hardcard card" src=""></img></div>
+    <div class="cardback"><img class="hardcard card" src=""></img></div>
+    <div class="cardback"><img class="hardcard card" src=""></img></div>
+    <div class="cardback"><img class="hardcard card" src=""></img></div>
+    <div class="cardback"><img class="hardcard card" src=""></img></div>
+    <div class="cardback"><img class="hardcard card" src=""></img></div>
+  </div>
+
+</div>
+</body>
+</html>
